# BlesslessEngine

./: .gitignore  CMakeLists.txt  README.md  build.bat
Editor/Python/: main.py
Editor/Source/: BlesslessEngine.cpp
Engine/Config/: EngineModules.json
Engine/Source/Engine/Core/Private/: Engine.cpp
Engine/Source/Engine/Core/Public/: Engine.h
Engine/Source/Engine/ModuleManager/Private/: ModuleManager.cpp
Engine/Source/Engine/ModuleManager/Public/: ModuleInterface.h  ModuleManager.h
Engine/Source/Engine/Scene/Private/: GameObject.cpp  Scene.cpp  Transform.cpp
Engine/Source/Engine/Scene/Public/: GameObject.h  Scene.h  Script.h
Engine/Source/EngineBridge/: EngineAPI.cs  ManagedBridge.h
Engine/Source/EngineCore/: Component.h  EngineCore.h  EngineLoop.cpp  GameObject.cpp  GameObject.h  ModuleManager.cpp  ModuleManager.h  RenderComponents.h  Scene.h  Transform.h
Engine/Source/EngineEditorBridge/: EditorBridge.h
Engine/Source/ManagedBridge/: EngineAPI.cs  ManagedBridge.h
Engine/Source/Programs/: associate_bless.reg
Engine/Source/Programs/BEVersionSelector/: BEVersionSelector.cpp
Engine/Source/Programs/BlesslessEngine/: BlesslessEngine.cpp
Modules/: README.md
Modules/Example/: Example.bemodule
Modules/Logger/: CMakeLists.txt  Logger.bemodule
Modules/Logger/Editor/: editor.py
Modules/Logger/Engine/: LoggerModule.cpp  LoggerModule.h
Projects/SampleProject/: project.bless
Projects/SampleProject/Content/: monkey.fbx
